defconfig: default scheduler to noop

--- a/arch/arm/configs/msm8916_defconfig
+++ b/arch/arm/configs/msm8916_defconfig
@@ -43,6 +43,7 @@ CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SIG_SHA512 is not set
 # CONFIG_MODULE_EXTRA_COPY is not set
 CONFIG_PARTITION_ADVANCED=y
+CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
 # CONFIG_MSM_STACKED_MEMORY is not set
